--- a/src/app/Manager/Annuel/entretien-annuel-calendar/entretien-annuel-calendar.component.html
+++ b/src/app/Manager/Annuel/entretien-annuel-calendar/entretien-annuel-calendar.component.html
@@ -63,6 +63,14 @@
                       <button class="btn btn-primary" (click)="preRemplirFormulaire(); editMode = true">
                         Modifier
                       </button>
+                      &nbsp; &nbsp;
+
+                      <button
+                        class="btn btn-danger"
+                        (click)="deleteEntretien(entretienDetails.entretien.id)"
+                      >
+                        Supprimer
+                      </button>
                       
                     </div>
                     <div *ngIf="editMode">
