--- a/src/app/Manager/quiz/add-quiz/add-quiz.component.html
+++ b/src/app/Manager/quiz/add-quiz/add-quiz.component.html
@@ -1,6 +1,10 @@
 <div class="card">
   <div class="card-body">
-    <h4 class="card-title"> Ajouter Un Test Technique </h4>
+    <div class="minimal-header">
+      <h3> Ajouter Un Test Technique</h3>
+  </div>
+  
+  
     <form [formGroup]="quizForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-md-6">
