--- a/src/app/Manager/quizQuestions/add-question/add-question.component.html
+++ b/src/app/Manager/quizQuestions/add-question/add-question.component.html
@@ -2,14 +2,11 @@
   <div class="row justify-content-center">
     <div class="">
       <div class="card">
-        <div class="card-header">
-          <h3 
-            class="text-center mb-0"
-            
-          >
-            Ajouter une question
-          </h3>
-        </div>
+       
+        <div class="minimal-header">
+          <h3>  Ajouter une question</h3>
+      </div>
+      
         <div class="card-body">
           <form (ngSubmit)="addQuestionToQuiz()" #questionForm="ngForm">
             <div class="form-group">
